Occasional horizontal scrollbar fix

--- a/jsmm-applet/editor/index.less
+++ b/jsmm-applet/editor/index.less
@@ -128,7 +128,7 @@
 /// SURFACE ///
 .editor-surface {
 	position: absolute;
-	width: 490px;
+	width: 480px;
 	margin-left: 1px; // editor border
 
 	.editor-typing & {
